crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_postfix_newline_sensitive_call_chain.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun chained(source: Source): Result {
  return source.select("name")
    .filter { it.active }[0]
    ?.build()
    ?: Result.Empty
}

diagnostics:
(none)
