crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_postfix_safe_call_and_not_null_chain.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun safeChain(node: Node?): String {
  return node?.parent?.children?.get(0)?.name!!
}

diagnostics:
(none)
