crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_prefix_double_bang.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val doubleNegation = ! !true

val repeatedNegation = ! ! ! !false

diagnostics:
(none)
