crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_property_accessors.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Accessors {
  var name: String = ""
    get() = field.ifBlank { "unknown" }
    private set(value) {
      field = value.trim()
    }
}

diagnostics:
(none)
