crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_property_explicit_backing_field.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ExplicitBackingField {
  val city: String
    field = "Paris"
}

diagnostics:
(none)
