crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_property_extension_receiver.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val String.lastIndexOrZero: Int
  get() = length - 1

val com.example.Scope.qualifiedTitle: String
  get() = toString()

val MutableMap<String, Expression<*>>.entryCount: Int
  get() = size

diagnostics:
(none)
