crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_property_top_level_val_var.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
const val BuildName = "dev"

var mutableCount: Int = 0

context(config: Config)
val configuredName: String
  get() = config.name

interface Config {
  val name: String
}

diagnostics:
(none)
