crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_repeated_and_non_lambda_labels.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val labeledValue = label@ 1

val repeatedlyLabeledLambda = first@ second@ {}

val repeatedlyLabeledValue = first@ second@ 1

diagnostics:
(none)
