crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_script_top_level_statements.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
#!/usr/bin/env kotlin

val scriptName = "jolt"
println("running $scriptName")
if (scriptName.isNotEmpty()) {
  println(scriptName.uppercase())
}

diagnostics:
(none)
