crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_string_multiline_template_expression_contexts.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun multilineTemplates(total: Int): String {
  val raw =
    """
        total=${total + 1}
        status=${if (total > 0) "ready" else "empty"}
    """
      .trimIndent()
  val multiDollar =
    $$"""
        literal $name
        interpolated $$total
    """
  return raw + multiDollar
}

diagnostics:
(none)
