crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_string_template_expression_contexts.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun templates(user: User, count: Int): String {
  val simple = "Hello, $user"
  val braced = "Next count is ${count + 1}"
  val nested = "Name: ${user.name ?: "anonymous"}"
  return "$simple; $braced; $nested"
}

diagnostics:
(none)
