crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_try_expression_catch_finally.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun tryExpression(path: String): String {
  return try {
    read(path)
  } catch (missing: MissingFile) {
    "missing"
  } catch (error: Throwable) {
    "error"
  } finally {
    close(path)
  }
}

diagnostics:
(none)
